--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
@@ -23,8 +24,10 @@
     "expo": "~52.0.32",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
+    "expo-file-system": "^18.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
@@ -38,6 +41,7 @@
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.7.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
