--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "expo": "~52.0.32",
+    "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
-    "expo-file-system": "^18.0.10",
-    "expo-font": "~13.0.3",
+    "expo-constants": "~17.0.7",
+    "expo-file-system": "~18.0.11",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
